--- a/vfio-ioctls/Cargo.toml
+++ b/vfio-ioctls/Cargo.toml
@@ -27,14 +27,11 @@ byteorder = "1.2.1"
 libc = "0.2.39"
 log = "0.4"
 uuid = { version = ">=0.8.2", optional = true }
-kvm-bindings = { version = "0.10.0", optional = true }
-kvm-ioctls = { version = "0.19.0", optional = true }
-thiserror = "1.0"
+kvm-bindings = { version = "0.11.1", optional = true }
+kvm-ioctls = { version = "0.21.0", optional = true }
+thiserror = "2.0"
 vfio-bindings = { version = "0.4.0", path = "../vfio-bindings" }
 vm-memory = { version = "0.16.0", features = ["backend-mmap"] }
-vmm-sys-util = "0.12.1"
-mshv-bindings = { version = "0.4.0", features = [
-  "with-serde",
-  "fam-wrappers",
-], optional = true }
+vmm-sys-util = "0.13.0"
+mshv-bindings = { version = "0.4.0", features = ["with-serde", "fam-wrappers"], optional = true }
 mshv-ioctls = { version = "0.4.0", optional = true }
